[package]
name = "wasi-preview1-component-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
# inherited license from https://github.com/bytecodealliance/wasmtime
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[lib]
crate-type = ["cdylib"]
name = "wasi_snapshot_preview1"

[lints]
workspace = true

[dependencies]
wasi = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"] }
byte-array-literals = { workspace = true }

[build-dependencies]
wasm-encoder = { workspace = true }
object = { workspace = true, features = ["archive"] }

[features]
default = ["reactor"]
reactor = []
command = []
proxy = []
