[package]
edition.workspace = true
name = "doc-sync"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { version = "0.1.0", path = "../../shared" }
hermes-ipfs = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "hermes-ipfs/v0.0.6" }
tokio = { version = "1.46.0", features = ["rt", "macros"] }
futures = "0.3.31"
anyhow = "1.0.100"
serde_json = "1.0.145"
