[package]
edition.workspace = true
name = "doc-sync"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { version = "0.1.0", path = "../../shared" }
hermes-ipfs = { git = "https://github.com/input-output-hk/catalyst-libs.git", rev = "ec0533cf54bb9707f12721ec6ea3693b27014777" }
tokio = { version = "1.46.0", features = ["macros"] }
futures = "0.3.31"
anyhow = "1.0.100"
serde_json = "1.0.145"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
