[package]
edition.workspace = true
name = "doc-sync"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
cid = "0.11.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
shared = { version = "0.1.0", path = "../../shared", features = ["doc-sync"] }
serde_json = "1.0.145"
sha2 = { version = "0.10.9" }
cardano-blockchain-types = { version = "0.0.9", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.9" }
