[package]
edition.workspace = true
name = "rbac-registration-indexer"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { version = "0.1.0", path = "../../shared", features = [
    "cardano-blockchain-types",
] }
anyhow = "1.0.100"
serde_json = "1.0.145"

rbac-registration = { version = "0.0.15", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.15" }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
