[package]
edition.workspace = true
name = "rbac-registration"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { version = "0.1.0", path = "../../shared", features = [
    "cardano-blockchain-types",
] }
anyhow = "1.0.100"
serde_json = "1.0.145"
serde = "1.0.228"
bech32 = "0.11.0"
x509-cert = "0.2.5"
hex = "0.4.3"
minicbor = "0.25.1"
ed25519-dalek = "2.2.0"
chrono = "0.4.42"
regex = "1.12.2"
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }

cardano-blockchain-types = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.8" }
rbac-registration = { version = "0.0.14", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "feat/rbac" }
catalyst-types = { version = "0.0.10", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.10" }
c509-certificate = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "c509-certificate-v0.0.3" }
