[package]
name = "staked-ada"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { version = "0.1.0", path = "../../shared", features = ["cardano-blockchain-types", "cat-gateway-types"] }
tracing = { version = "0.1.41", features = ["log"] }
regex = "1.11.1"


cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cardano-blockchain-types/v0.0.6" }
serde = "1.0.228"
serde_json = { version = "1.0.132", features = ["arbitrary_precision"] }
anyhow = "1.0.99"
num-bigint = "0.4.6"
utoipa = { version = "5.4.0", features = ["uuid", "url"] }