[package]
name = "overhead_benchmark"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
cardano-chain-follower = { path = "../.." }

anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "help", "usage", "std"], default-features = false }
pallas-traverse = "0.24.0"
pallas-hardano = "0.24.0"
tokio = { version = "1.37.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
