[package]
name = "verify-component-adapter"
license = "Apache-2.0 WITH LLVM-exception"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wasmparser = { workspace = true }
wat = { workspace = true }
anyhow = { workspace = true }
